@@ -24,6 +24,9 @@ PYTHONFILES = $(shell find usr -type f -exec file {} \; | perl -ne 'print if s/^
 # temporary pot-file template
 POTFILE = usr/share/simbuto/lang/simbuto.pot
 
+# the simbuto.__init__ file
+SIMBUTOPYTHONINIT = usr/lib/simbuto/python/simbuto/__init__.py
+
 # get information from changelog
 SIMBUTOVERSION = $(shell perl -ne 'if(s/^simbuto\s*\((.*?)\).*$$/$$1/g){print;exit}' $(CHANGELOG))
 SIMBUTODATE    = $(shell perl -ne 'if(s/^\s*--.*@.*,\s*(.*)$$/$$1/g){print;exit}' $(CHANGELOG))
@@ -31,11 +34,13 @@ SIMBUTODATE    = $(shell perl -ne 'if(s/^\s*--.*@.*,\s*(.*)$$/$$1/g){print;exit}
 # pandoc options for manpage creation
 PANDOCOPTS = -f markdown -t man --standalone -Vfooter='Version $(SIMBUTOVERSION)' -Vdate='$(SIMBUTODATE)'
  
-all: $(MOFILES) $(GFMANPAGES)
+# default target
+.PHONY: all
+all: $(MOFILES) $(GFMANPAGES) $(SIMBUTOPYTHONINIT)
 
 # build the manpages
 # manpages:
-%.1: %.1.md
+%.1: %.1.md $(CHANGELOG)
 	pandoc $(PANDOCOPTS) -o $@ $<
 
 # create the pot-file with all translatable strings from the srcfiles
@@ -45,12 +50,16 @@ $(POTFILE): $(PYTHONFILES)
 # update the translated catalog
 %.po: $(POTFILE)
 	VERSION_CONTROL=off msgmerge -U --backup=off $@ $<
+	touch $@ # make sure timestamp was updated
 
 # compile the translations
 %.mo: %.po
 	msgfmt -o $@ $<
 
-
+# update the version string in the code
+$(SIMBUTOPYTHONINIT): $(CHANGELOG)
+	perl -pi -e 's/^(VERSION\s*=\s*)("[^"]+")$$/$$1"$(SIMBUTOVERSION)"/g' $(SIMBUTOPYTHONINIT)
+	
 .PHONY: clean
 clean:
 	rm -f $(MOFILES)
