@@ -1,8 +1,6 @@
 [logging]
-# log messages?
-logging = yes
 # which loglevel?
 # one of debug - info - warning - error or critial
-# defaults to debug which is the most verbose
-loglevel = debug
+# defaults to warning 
+loglevel = warning
 
