@@ -1,14 +1,17 @@
 #!/usr/bin/env python3
 import sys, os
 import logging
+import argparse
 
 logger = logging.getLogger(__name__)
+logger.addHandler(logging.StreamHandler())
 
 ####################
 ### LIBRARY PATH ###
 ####################
 # add /usr/lib/simbuto/python to the module paths
 sys.path.insert(1,"/usr/lib/simbuto/python")
+import simbuto
 import simbuto.config
 
 ################
@@ -16,13 +19,33 @@ import simbuto.config
 ################
 simbuto.config.install_language_globally()
 
+#######################
+### Argument Parser ###
+#######################
+argparser = argparse.ArgumentParser(description = _("Simbuto - a simple " 
+    "graphical budgeting tool"),add_help=False)
+argparser.add_argument('filename', nargs="?", help=_("the budget file to open"))
+argparser.add_argument('-h','--help', action='help', help=_(
+    "show help message and exit"))
+argparser.add_argument('-v','--verbose', action='store_true', 
+    help=_("verbose output"))
+argparser.add_argument('-d','--debug', action='store_true', 
+    help=_("even more verbose output"))
+argparser.add_argument('--version', action='version',
+    help=_("show version info and exit"),
+    version = "{p} {v}".format(p=_("Simbuto"),v=simbuto.VERSION)
+    )
+# parse the arguments
+args = argparser.parse_args()
+
 #####################
 ### CONFIGURATION ###
 #####################
 # make sure, there is a personal configuration folder
-logger.debug(_("making sure there is a ~/.simbuto folder"))
 simbuto.config.make_sure_there_is_simbuto_dotfolder()
+# read the personal configuration
 config = simbuto.config.get_personal_configuration()
+# read system gui configuration as well
 config.read(["/etc/simbuto/conf/gui.conf"])
 
 ####################
@@ -31,9 +54,19 @@ config.read(["/etc/simbuto/conf/gui.conf"])
 simbuto.config.setup_logger_from_config(logger = logger, 
     section="logging", config = config)
 
+if args.debug:
+    for handler in logger.handlers: 
+        handler.setLevel(logging.DEBUG)
+    logger.setLevel(logging.DEBUG)
+    logger.propagate = True
+if args.verbose:
+    for handler in logger.handlers: handler.setLevel(logging.INFO)
+    logger.setLevel(logging.INFO)
+    logger.propagate = True
 
 logger.info(_("This is simbuto."))
 logger.debug(_("command-line: {}").format(sys.argv))
+logger.debug(_("parsed arguments: {}").format(args))
 logger.info(_("simbuto is still in early development phase..."))
 
 #####################
@@ -85,13 +118,12 @@ gui.setup_gui()
 signalmanager.connect_to_signal(
     name="get-editor-content", action = gui.get_current_editor_content)
 
-try:
-    filename = sys.argv[1]
+if args.filename:
     logger.info(_("specified file to open via command line: {}").format(
-        filename))
-    gui.fill_editor_from_file(filename)
-except IndexError:
-    logger.info(_("no file specified to open via command line"))
+        args.filename))
+    gui.fill_editor_from_file(args.filename)
+else:
+    logger.debug(_("no file specified to open via command line"))
 
 # run the gui
 gui.run()
