@@ -1,0 +1,16 @@
+# -*- coding: utf-8 -*-
+# System modules
+
+# External modules
+
+# Internal modules
+
+# the version
+VERSION = "0.1.1"
+
+__version__ = VERSION
+
+__all__ = []
+
+
+
