@@ -1,6 +1,7 @@
 simbuto (0.1.1) UNRELEASED; urgency=medium
 
-  * minor changes
+  * add command-line options (help, verbose, debug)
+  * add version info to about dialog
 
  -- Yann Büchau <yann.buechau@web.de>  Thu, 05 Jan 2017 14:38:08 +0100
 
